--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <script>
             __fast__.init(
                 {
+                    components: ['Sidebar','Card'],
                     css: `body {margin:0; padding:0; font-family: sans-serif}`
-                }, 
-                document.body.querySelectorAll('*')
+                }
             );
         </script>
     </body>
