--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <button: text="кнопка"></button:>
         <card:>
             <slot name="header">
-            <button: text="Кнопка"></button:>
+                <div>Заголовок</div>
+                <button: text="Кнопка"></button:>
             </slot>
         </card:>
 
