--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <script>
             __fast__.init(
                 {
-                    components: ['Sidebar','Card'],
+                    components: [],
                     css: `body {margin:0; padding:0; font-family: sans-serif}`
                 }
             );
