--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
         
     </head>
     <body>
-        <Sidebar:></Sidebar:>
-        <button: text="кнопка"></button:>
-        <card:>
-            <slot name="header">
-                <div>Заголовок</div>
-                <button: text="Кнопка"></button:>
-            </slot>
-        </card:>
+        
+        <Page: theme="white">
+            1
+        </Page:>
 
+        <script src="fast/sass.sync.min.js"></script>
         <script src="fast/fast.js"></script>
         <script>
             __fast__.init(
