--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <script>
             __fast__.init(
                 {
-                    components: [],
+                    components: ['Promo','Button','Page','Icon'],
                     css: `body {margin:0; padding:0; font-family: sans-serif} `
                 }
             );
