--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             __fast__.init(
                 {
                     components: ['Promo','Button','Page','Icon'],
-                    css: `body {margin:0; padding:0; font-family: sans-serif} `
+                    css: `body {margin:0; padding:0; font-family: sans-serif;} `
                 }
             );
         </script>
