--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <script>
             __fast__.init(
                 {
-                    components: ['Promo','Button','Page','Icon'],
+                    components: ['Svg-inline', 'Promo'],
                     css: `body {margin:0; padding:0; font-family: sans-serif;}`
                 }
             );
