--- a/examples/input/index.html
+++ b/examples/input/index.html
@@ -4,9 +4,9 @@
         
     </head>
     <body>
-        <Input: ></Input:>
+        <Input: static="https://mysite.com/" id="test" ></Input:>
 
-        <script src="../../dist/fast.min.js"></script>
+        <script src="../../fast/fast.js"></script>
         <script>
             __fast__.init(
                 {
