--- a/examples/input/index.html
+++ b/examples/input/index.html
@@ -6,7 +6,7 @@
     <body>
         <Input: static="https://mysite.com/" id="test" ></Input:>
 
-        <script src="../../fast/fast.js"></script>
+        <script src="../../dist/fast.min.js"></script>
         <script>
             __fast__.init(
                 {
