--- a/index.html
+++ b/index.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+    <title>Fast</title>
+    <style>
+        body {
+            background-color: tomato;
+            font-family: sans-serif;
+            font-size: 34px;
+            color: #fff;
+            font-weight: 800;
+            margin: 24px
+        }
+        a {
+            color: #fff;
+            line-height: 2;
+        }
+        h1 {
+            font-size: 200px;
+            margin: 0;
+        }
+        h2 {
+            font-size: 120px;
+            margin:0;
+        }
+    </style>
     </head>
     <body>
-        <Page: theme="light">
-            <slot name="main">
-                <Promo: 
-                    title="Hair Facker"
-                    description="Салон красоты, парикмахерская"
-                ></Promo:>
-            </slot>
-        </Page:>
-
-        <script src="fast/sass.sync.min.js"></script>
-        <script src="fast/fast.js"></script>
-        <script>
-            __fast__.init(
-                {
-                    components: ['Svg-inline', 'Promo'],
-                    css: `body {margin:0; padding:0; font-family: sans-serif;}`
-                }
-            );
-        </script>
+        <h1>Fast</h1>
+        <h2>Примеры</h2>
+        <div>
+            <div><a href="examples/input/index.html">Инпут</a></div>
+            <div><a href="examples/landing/index.html">Лендинг</a></div>
+        </div>
     </body>
 </html>
