--- a/examples/landing/index.html
+++ b/examples/landing/index.html
@@ -13,7 +13,7 @@
             </slot>
         </Page:>
 
-        <script src="/libs/sass.sync.min.js"></script>
+        <script src="libs/sass.sync.min.js"></script>
         <script src="../../dist/fast.min.js"></script>
         <script>
             __fast__.init(
