--- a/examples/input/index.html
+++ b/examples/input/index.html
@@ -10,7 +10,7 @@
         
         <div class="story">
             <div class="description">Инпут с нестираемой частью</div>
-            <Input: static="https://mysite.com/" autofocus="true" ></Input:>
+            <Input: static="https://mysite.com/" placeholder="?alpha=true&beta=false" autofocus="true" ></Input:>
         </div> 
         
         <div class="story">
