--- a/examples/input/index.html
+++ b/examples/input/index.html
@@ -25,7 +25,7 @@
 
         <script src="../../src/fast.js"></script>
         <script>
-            __fast__.init(
+            Fast.init(
                 {
                     components: [],
                     css: `body {font-family:sans-serif;} .story {margin: 48px 0;} .description {margin: 24px 0;}`
