--- a/examples/landing/index.html
+++ b/examples/landing/index.html
@@ -16,7 +16,7 @@
         <script src="../../libs/sass.sync.min.js"></script>
         <script src="../../dist/fast.min.js"></script>
         <script>
-            __fast__.init(
+            Fast.init(
                 {
                     components: ['Svg-inline', 'Promo'],
                     css: `body {margin:0; padding:0; font-family: sans-serif;}`
