--- a/examples/landing/index.html
+++ b/examples/landing/index.html
@@ -14,7 +14,7 @@
         </Page:>
 
         <script src="../../libs/sass.sync.min.js"></script>
-        <script src="../../dist/fast.min.js"></script>
+        <script src="../../src/fast.js"></script>
         <script>
             Fast.init(
                 {
