--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <h2>Примеры</h2>
         <div>
             <div><a href="examples/input/index.html">Инпут</a></div>
+            <div><a href="examples/search/index.html">Поиск</a></div>
             <div><a href="examples/landing/index.html">Лендинг</a></div>
         </div>
     </body>
